src/objects/Top_Targeted_School__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Top Targeted Schools</relationshipLabel>
        <relationshipName>Top_Targeted_Schools</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mutually_Agreed_to_Objectives__c</fullName>
        <label>Mutually Agreed to Objectives</label>
        <referenceTo>Mutually_Agreed_to_Objectives__c</referenceTo>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Substantive_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Substantive Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Top Targeted School</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top Targeted Schools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>